<resources>
    <string name="app_name">Events</string>

    <string name="lets_sign_y">Lets Sign you in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign in</string>
    <string name="register_message_part1">Don\'t have an account?</string>
    <string name="register_message_part2">Register Now</string>
    <string name="Register_account">Lets Register \nYour Account</string>
    <string name="SignUp">Sign up</string>
    <string name="already_registered_message_part1">Already have an account?</string>
    <string name="already_registered_message_part2">Login Here</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="Explore_Events">Explore Events</string>
    <string name="myEvents">My Events</string>
    <string name="rateEvents">Rate Events</string>
    <string name="rateEvent">Rate Event</string>
    <string name="createEvents">Create Events</string>
    <string name="searchUsers">Search Users</string>
    <string name="timeline">Timeline</string>
    <string name="Log_Out">Log Out</string>
    <string name="Attend">Attend</string>
    <string name="Name_Event">Name Event</string>
    <string name="Category_Event">Category Event</string>
    <string name="Description">Description</string>
    <string name="Start_Date_Event">Start Date Event</string>
    <string name="End_Date_Event">End Date Event</string>
    <string name="Location_Event">Location Event</string>
    <string name="eventFinished">This event has already finished</string>
    <string name="opinion">Write Opinion</string>
    <string name="rate">Rate Event</string>
    <string name="hello">Hello, user!</string>
    <string name="sports">Sports</string>
    <string name="concerts">Concerts</string>
    <string name="museums">Museums</string>
    <string name="title">Title</string>
    <string name="search">Search user</string>
    <string name="matching">X matching results found:</string>
    <string name="matchingFormat">%d matching results found:</string>
    <string name="user1">Spencer Wazowski</string>
    <string name="user2">Spencer Jaeger</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attending_Event">You are not attending this event</string>
    <string name="drop_Event">Do you want to drop this event from your calendar?</string>
    <string name="add_Event">Do you want to add this event to your calendar?</string>
    <string name="title_activity_open_chat">OpenChatActivity</string>
    <string name="bad_connection">connection to api failed</string>
    <string name="login_failed">Login Failed</string>
    <string name="user_not_found">User not found</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="unable_to_find_users">Unable to find users</string>
    <string name="search_users">Search Users</string>
    <string name="our_messages">Our Chats</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="profile">Profile</string>
    <string name="navHeaderTitle">navigation header</string>
    <string name="navigation_drawer_open">nav open</string>
    <string name="navigation_drawer_close">nav closed</string>
    <string name="explore_events">Explore Events</string>
    <string name="HomeScreen">Home</string>
    <string name="friend_added">Friend Request Sent!</string>
    <string name="unable_to_add_friend">Unable to Send Request!</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="default_message">this is a message bubble</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goto_chat">Go To Chat</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Go_to_chat">Go to Chat</string>
    <string name="add_Friend">Send Friend Request</string>
    <string name="View_Requests">View Friend Requests</string>
    <string name="Remove_Friend">Remove Friend</string>
    <string name="Friend_Removed">Friend Removed</string>
    <string name="Error_Occurred">Error Occurred</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="Already_Friends">You are already friends!</string>
    <string name="see_friends">View Friends</string>
    <string name="friends">Friends</string>
    <string-array name="categories_array">
        <item>Category Event</item>
        <item>Sports</item>
        <item>Concerts</item>
        <item>Museums</item>
    </string-array>
    <string name="delete_account">Delete Account</string>
    <string name="unattend_text">Are you sure you want to unattend this event?</string>
    <string name="unattend_message">You will no longer be able to attend this event.</string>
    <string name="number">-</string>
    <string name="Event">Event</string>
    <string name="view_attendence">View Attendance</string>
    <string name="comments">Comments:</string>
    <string name="keyword">name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="searchAll">Search All</string>
    <string name="searchBest">Search Best</string>
    <string name="searchInput">Search All</string>
    <string name="GetBest">Get Best</string>
    <string name="clear">Clear Inputs</string>
    <string name="edit_profile">Profile editor</string>
    <string name="createnewEvent">Create a new event</string>
    <string name="inputAComment">Inupt a comment</string>
    <string name="Comment">Comment</string>
    <string name="Comment_Error">You must attend the event to comment</string>
    <string name="Confirm_Edit">Confirm edit</string>
    <string name="Deny_edit">Deny edit and go back</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Repeat_Email">Repeat email</string>
    <string name="EditUser_main_title">Edit your account</string>
    <string name="imageURL">Image URL</string>
    <string name="updateEvent">Update Event</string>
    <string name="editEvent">Edit Event</string>
    <string name="numberofpeople">Max number of Participants</string>
    <string name="category">Select Category</string>
    <string name="Invalid_email">Incorrect Email Format</string>
    <string name="Invalid_password">Password Too Short</string>

</resources>