<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="206dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SideMenuActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/img"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:layout_marginStart="90dp"
        android:layout_marginTop="-33dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Explore_Events"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myEvents"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateEvents"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEvents"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeline"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchUsers"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log_Out"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_light" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="-520dp"
        android:src="@drawable/img_1"
        tools:ignore="ContentDescription" />

</LinearLayout>