<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/Register_account"
        android:textAppearance="@style/BigText"
        android:gravity="top"
        tools:ignore="MissingConstraints"
        android:fontFamily="@font/outfit_extra_bold"/>
    <EditText
        android:id="@+id/SignUp_First_Name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/inputbox"
        android:gravity="top"
        android:text="@string/First_Name"
        android:padding="16dp"
        android:textColor="@color/inputText"
        android:textAppearance="@style/InputFieldText"
        android:fontFamily="@font/outfit_medium"/>

    <EditText
        android:id="@+id/SignUp_Last_Name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/inputbox"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/Last_Name"
        android:padding="16dp"
        android:textColor="@color/inputText"
        android:textAppearance="@style/InputFieldText"
        android:fontFamily="@font/outfit_medium"/>

    <EditText
        android:id="@+id/SignUp_Phone_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/inputbox"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/phonenumber"
        android:padding="16dp"
        android:textColor="@color/inputText"
        android:textAppearance="@style/InputFieldText"
        android:fontFamily="@font/outfit_medium"/>

    <EditText
        android:id="@+id/SignUp_email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/inputbox"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/email"
        android:padding="16dp"
        android:textColor="@color/inputText"
        android:textAppearance="@style/InputFieldText"
        android:fontFamily="@font/outfit_medium"/>

    <EditText
        android:id="@+id/SignUp_password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputbox"
        android:gravity="top"
        android:text="@string/password"
        android:padding="16dp"
        android:textColor="@color/inputText"
        android:textAppearance="@style/InputFieldText"
        android:fontFamily="@font/outfit_medium"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bigbutton"
        android:text="@string/SignUp"
        android:textAppearance="@style/mediumText"
        android:fontFamily="@font/outfit_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/already_registered_message_part1"
            android:paddingRight="5dp"
            android:fontFamily="@font/outfit_semi_bold"
            android:textColor="@color/inputText"
            android:gravity="center"/>
        <Button
            android:id="@+id/move_to_register_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/already_registered_message_part2"
            android:textAppearance="@style/linkText"
            android:fontFamily="@font/outfit_semi_bold"
            android:gravity="left|center_vertical"/>
    </LinearLayout>

</LinearLayout>